# python-dbt-stack

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: README.md  auto-release.yml  changelog-reminder.yml  docker-registry.yml  pr-build.yml  python.yml  requirements-consistency.yml  wheelhouse.yml
docs/: deploy_wheelhouse_offline.md  deploy_with_conda.md  deploy_with_docker.md  env_vars.md  orchestration.md  updating_dependencies.md
src/lf_py_stack/orchestration/: __init__.py  cli.py  components.py  config.py  duckdb.py  env_vars.py  example.py  logger.py  mail.py  steps.py  utility.py
tests/components/: test_components.py  test_duckdb.py
tests/integration/: test_orchestration_cli_example.py  test_orchestration_cli_select.py
