[project]
name = "lf-py-stack"
version = "0.3.0"
description = "UV Project with fixed Python Versions and DBT dependencies"
readme = "README.md"
authors = [
  {name = "F. Paul Spitzner", email = "paul.spitzner@linkfish.eu"},
]
requires-python = ">=3.12,<3.13" # 2025-12-08: 3.13 macht noch Probleme mit unseren Paketen
dependencies = [
    "numpy",
    "scipy",
    "sqlalchemy",
    "pandas",
    "polars",
    "typer",
    "python-dotenv",
    "ruamel-yaml",
    "openpyxl>=3.1.5", # excel
    # DBT
    "dbt-core>=1.9.8,<1.10", # Usually limited by our dbt-sqlserver dependency
    "dbt-duckdb>=1.9.4,<1.10",
    "duckdb>=1.5.1",
    "dbt-sqlserver>=1.9.0",
    "dbt-postgres>=1.9.0,<1.10",
    # Orchestration
    "sf-hamilton>=1.89.0",
]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typed" },
    "pre-commit>=4.5.1",
]
lint = ["ruff>=0.14.14"]
test = ["pytest>=9.0.2"]
typed = ["mypy>=1.19.1", "types-PyYAML", "typing_extensions"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "lf_py_stack"
module-root = "src"
include = ["lf_py_stack/_bundles/*.bundle"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PTH", # Use pathlib instead of os.path
    "W",   # pycodestyle
]

[tool.mypy]
follow_untyped_imports = true # hamilton does not seem to have the py.typed marker yet
